force-app/main/default/objects/util_closer_Batch_Log__c/fields/Active_Rules_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Rules_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of active rules at time of execution</description>
    <label>Active Rules Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>