force-app/main/default/objects/util_closer_Batch_Log__c/fields/Active_Rules_JSON__c.field-meta.xml
<CustomField>
    <fullName>Active_Rules_JSON__c</fullName>
    <description>JSON array of active rule names at time of execution</description>
    <label>Active Rules JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>