force-app/main/default/objects/util_closer_Batch_Log__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <description>The AsyncApexJob ID for this batch execution</description>
    <externalId>true</externalId>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>