force-app/main/default/objects/util_closer_Batch_Log__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <description>Duration of batch execution in seconds</description>
    <formula>IF(AND(NOT(ISBLANK(End_Time__c)), NOT(ISBLANK(Start_Time__c))), (End_Time__c - Start_Time__c) * 86400, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>