force-app/main/default/objects/util_closer_Batch_Log__c/fields/Execution_Mode__c.field-meta.xml
<CustomField>
    <fullName>Execution_Mode__c</fullName>
    <description>Whether this was a full execution or simulation</description>
    <label>Execution Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Simulation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>