force-app/main/default/objects/util_closer_Batch_Log__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who initiated the batch job</description>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Batch Logs</relationshipLabel>
    <relationshipName>Batch_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>