force-app/main/default/objects/util_closer_Batch_Log__c/fields/Status_Transitions_JSON__c.field-meta.xml
<CustomField>
    <fullName>Status_Transitions_JSON__c</fullName>
    <description>JSON object tracking status transition counts (from->to: count)</description>
    <label>Status Transitions JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>