force-app/main/default/objects/util_closer_Batch_Log__c/fields/Total_Batches_Executed__c.field-meta.xml
<CustomField>
    <fullName>Total_Batches_Executed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of batch chunks executed</description>
    <label>Total Batches Executed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>