force-app/main/default/objects/util_closer_Batch_Log__c/fields/Total_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Total_Records_Processed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of Cases evaluated</description>
    <label>Total Records Processed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>