force-app/main/default/objects/util_closer_Batch_Log__c/fields/Total_Records_Updated__c.field-meta.xml
<CustomField>
    <fullName>Total_Records_Updated__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of Cases successfully updated</description>
    <label>Total Records Updated</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>