force-app/main/default/objects/util_closer_Batch_Log__c/listViews/All_Batch_Logs.listView-meta.xml
<ListView>
    <fullName>All_Batch_Logs</fullName>
    <columns>NAME</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Duration_Seconds__c</columns>
    <columns>Status__c</columns>
    <columns>Execution_Mode__c</columns>
    <columns>Total_Records_Processed__c</columns>
    <columns>Total_Records_Updated__c</columns>
    <columns>Total_Records_Failed__c</columns>
    <columns>Running_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Batch Logs</label>
    <language>en_US</language>
</ListView>