force-app/main/default/objects/util_closer_Batch_Log__c/listViews/Simulation_Runs.listView-meta.xml
<ListView>
    <fullName>Simulation_Runs</fullName>
    <columns>NAME</columns>
    <columns>Start_Time__c</columns>
    <columns>Duration_Seconds__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Records_Processed__c</columns>
    <columns>Total_Records_Updated__c</columns>
    <columns>Active_Rules_Count__c</columns>
    <columns>Running_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Execution_Mode__c</field>
        <operation>equals</operation>
        <value>Simulation</value>
    </filters>
    <label>Simulation Runs</label>
    <language>en_US</language>
</ListView>